--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@editorjs/editorjs": "^2.30.8",
     "@lucide/astro": "^0.539.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "astro": "^5.12.9",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hotkeys-hook": "^5.1.0",
     "tailwindcss": "^4.1.11"
   }
 }
