--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
-    "@editorjs/editorjs": "^2.30.8",
     "@lucide/astro": "^0.539.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tippyjs/react": "^4.2.6",
+    "@tiptap/core": "^3.1.0",
+    "@tiptap/pm": "^3.1.0",
+    "@tiptap/react": "^3.1.0",
+    "@tiptap/starter-kit": "^3.1.0",
+    "@tiptap/suggestion": "^3.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.9",
@@ -21,5 +26,8 @@
     "react-dom": "^19.1.1",
     "react-hotkeys-hook": "^5.1.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.90.0"
   }
 }
