--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "^3.1.0",
+    "@tiptap/extension-highlight": "^3.2.0",
+    "@tiptap/extension-link": "^3.2.0",
+    "@tiptap/extension-superscript": "^3.2.0",
+    "@tiptap/extension-text-align": "^3.2.0",
+    "@tiptap/extension-youtube": "^3.2.0",
     "@tiptap/pm": "^3.1.0",
     "@tiptap/react": "^3.1.0",
     "@tiptap/starter-kit": "^3.1.0",
