--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.9",
+    "compressorjs": "^1.2.1",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
