--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "^3.1.0",
     "@tiptap/extension-highlight": "^3.2.0",
+    "@tiptap/extension-image": "^3.2.0",
     "@tiptap/extension-link": "^3.2.0",
     "@tiptap/extension-superscript": "^3.2.0",
     "@tiptap/extension-text-align": "^3.2.0",
