--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.9",
     "compressorjs": "^1.2.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-hotkeys-hook": "^5.1.0",
     "tailwindcss": "^4.1.11"
