--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/cloudflare": "^12.6.7",
     "@astrojs/react": "^4.3.0",
     "@lucide/astro": "^0.539.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tippyjs/react": "^4.2.6",
